# byo-gpg

./: Cargo.toml  LICENSE  notes.txt  post.md
src/: lib.rs  main.rs  output.rs  parsers.rs  pgp.rs  primes.rs  rsa.rs  utils.rs
src/parsers/: base64.rs  key.rs  mod.rs  pgp_utils.rs  signature.rs  utils.rs
src/pgp/: key.rs  mod.rs  signature.rs
test_inputs/01/: test-key-n.txt
test_inputs/02/: shakes3.txt  shakes3.txt.asc
test_inputs/03/: shakes3.txt.asc
test_inputs/04/: shakes3.txt.asc
tests/01/: main.rs  msg.txt.asc
tests/02/: main.rs
tests/03/: main.rs  public.key  shakes3.txt
tests/04/: main.rs  shakes3.txt  shakes3.txt.asc
