[package]
name = "pgp-rs"
version = "0.1.0"
authors = ["Andrew Halle <ahalle@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
num-bigint = { version = "0.3.0", features = ["rand"] }
num-integer = "0.1.43"
num-traits = "0.2.12"
rand = "0.7"
rayon = "1.4.0"
