[package]
name = "pgp-rs"
version = "0.1.0"
authors = ["Andrew Halle <ahalle@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
num = { version = "0.3.0", features = ["rand", "serde"] }
rand = "0.7"
rayon = "1.4.0"
termprogress = "0.3.4"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["default", "derive"] }
nom = "5.1.2"
base64 = "0.12.3"
byteorder = "1.3.4"
